import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
    id 'fabric-loom'
    id 'maven-publish'
    id "com.modrinth.minotaur"
    id 'net.darkhax.curseforgegradle'
}

version = project.mod_version
group = project.mod_group_id

base {
    archivesName = "${mod_name} ${minecraft_version}"
}

loom {
    runs {
        client {
            client()
            setConfigName('Fabric Client 1.20.1')
            ideConfigGenerated(true)
            runDir('runs/client')
        }
    }
}

def changelogText = project.file('changelog.md').text
def site_debugMode = false

repositories {
    // In Root Project Build.gradle
}

dependencies {
    // Core Minecraft dependencies
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"

    // Fabric Loader and API
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    //modImplementation fileTree(include: ['*.jar'], dir: 'libs')

    modImplementation "curse.maven:timeless-and-classics-zero-1028108:5529117-sources-5529578"

    // Voice Chat API dependencies
    modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${voicechat_version}"
    implementation "de.maxhenkel.voicechat:voicechat-api:${project.voicechat_api_version}"

    // Configuration handling
    compileOnly "com.electronwill.night-config:toml:3.6.0"

    // Forge Config API Port
    modApi "fuzs.forgeconfigapiport:forgeconfigapiport-fabric:${project.forgeconfigapiport}"
}

processResources {
    inputs.property "version", project.version
    inputs.property "minecraft_version", project.minecraft_version
    inputs.property "loader_version", project.loader_version
    inputs.property "voicechat_api_version", project.voicechat_api_version
    filteringCharset "UTF-8"

    filesMatching("fabric.mod.json") {
        expand "version": project.version,
                "minecraft_version": project.minecraft_version,
                "loader_version": project.loader_version,
                "voicechat_api_version": project.voicechat_api_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.mod_group_id}" }
    }
}

tasks.register('publishCurseForge', TaskPublishCurseForge) {
    apiToken = System.getenv("CURSEFORGE_TOKEN")

    def mainFile = upload('1173633', file("build/libs/${mod_name} ${minecraft_version}-${mod_version}.jar"))
    mainFile.displayName = "${mod_name} ${minecraft_version}-${mod_version} (Fabric)"
    mainFile.releaseType = 'beta'
    mainFile.changelog = changelogText
    debugMode = site_debugMode
    mainFile.changelogType = "markdown"
    mainFile.addEnvironment("Server","Client")

    mainFile.addRequirement("fabric-api")
    mainFile.addRequirement("simple-voice-chat")
    mainFile.addRequirement("forge-config-api-port-fabric")
    mainFile.addOptional("timeless-and-classics-zero")
}


modrinth {
    token = System.getenv("MODRINTH_TOKEN")// Remember to have the MODRINTH_TOKEN environment variable set or else this will fail - just make sure it stays private!
    projectId = "voiceless-survival" // This can be the project ID or the slug. Either will work!
    versionNumber = "${minecraft_version}-${mod_version}" // You don't need to set this manually. Will fail if Modrinth has this version already
    versionName = "${mod_name}-${minecraft_version}-${mod_version} (Fabric)"
    versionType = "beta" // This is the default -- can also be `beta` or `alpha`
    uploadFile = file("build/libs/${mod_name} ${minecraft_version}-${mod_version}.jar") // With Loom, this MUST be set to `remapJar` instead of `jar`!
    gameVersions = ["${minecraft_version}"] as Iterable<? extends String>
    // Must be an array, even with only one version
    loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
    changelog = changelogText
    debugMode = site_debugMode


    dependencies { // A special DSL for creating dependencies
        required.project "fabric-api"
        required.project 'simple-voice-chat'
        required.project 'forge-config-api-port'
        optional.project 'timeless-and-classics-zero'
    }
}

// This task is for uploading to the site above this code
tasks.register('publicModdedSite') {
    dependsOn 'build'
    dependsOn 'publishCurseForge'
    dependsOn 'modrinth'
}